[package]
name = "run_script"
version = "0.10.1"
authors = ["Sagie Gur-Ari <sagiegurari@gmail.com>"]
description = "Run shell scripts in rust."
license = "Apache-2.0"
edition = "2021"
documentation = "https://sagiegurari.github.io/run_script/api/run_script/index.html"
homepage = "http://github.com/sagiegurari/run_script"
repository = "https://github.com/sagiegurari/run_script.git"
readme = "README.md"
keywords = ["shell", "scripts", "os", "command", "runner"]
categories = ["command-line-interface", "command-line-utilities"]
include = [
  "/benches/*",
  "/examples/*",
  "/src/*",
  "/tests/*",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/Makefile.toml",
]

[dependencies]
fsio = { version = "^0.4", features = ["temp-path"] }

[dev-dependencies]
doc-comment = "^0.3"
